# image_gallery_project

./: .env.example  .gitignore  README.md  pyproject.toml
conf/: settings.py  urls.py
images/: models.py  serializers.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_rename_imageltem_imageitem.py
